fixed bg in intro (especially on mobile)

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -24,7 +24,8 @@
   }
 
   @media (max-width: $mobile-width-only) {
-    height: 647px;
+    height: auto;
+    padding-bottom: 69px;
     background-image: url("../img/bg-intro-mobile@1x.png");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -177,8 +178,17 @@
     min-width: 100%;
     min-height: 100%;
   }
+
+  @media (max-width: $tablet-width) {
+    height: auto;
+  }
 }
 
 .intro__pic img {
   object-fit: cover;
+
+  @media (max-width: $tablet-width) {
+    height: auto;
+    max-height: 1009px;
+  }
 }
